src/test/ui/type/missing-let-in-binding.stderr
error[E0658]: type ascription is experimental
  --> $DIR/missing-let-in-binding.rs:4:5
   |
LL |     _foo: i32 = 4;
   |     ^^^^^^^^^
   |
   = note: see issue #23416 <https://github.com/rust-lang/rust/issues/23416> for more information
   = help: add `#![feature(type_ascription)]` to the crate attributes to enable
help: you might have meant to introduce a new binding
   |
LL |     let _foo: i32 = 4;
   |     +++

error: aborting due to previous error

For more information about this error, try `rustc --explain E0658`.
